[package]
name = "systems-of-equations-solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }


